--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
 </head>
 <body>
-  <h2> Knight Moves </h2>
+  <h1> Knight Moves </h1>
+  <h2> Click on any square to start the Game <h2>
 <ul>
     <div class="divv" id="row8">
       <!-- First row  -->
         <li class="box" id=801></li>
-        <li class="box" id=802>knight</li>
+        <li class="box" id=802></li>
         <li class="box" id=803></li>
         <li class="box" id=804></li>
         <li class="box" id=805></li>
